--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/assets/favicon.17e50649.svg" />
+    <link rel="icon" type="image/svg+xml" href="/boilerplate-vite-react-typescript-sass-edgrid/assets/favicon.17e50649.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
     <meta name="description" content="">
@@ -15,8 +15,8 @@
     <meta property="og:image:width" content="" />
     <meta property="og:image:height" content="" />
     <meta property="og:type" content="website" />
-    <script type="module" crossorigin src="/assets/index.8289bbe3.js"></script>
-    <link rel="stylesheet" href="/assets/index.999e58a8.css">
+    <script type="module" crossorigin src="/boilerplate-vite-react-typescript-sass-edgrid/assets/index.8289bbe3.js"></script>
+    <link rel="stylesheet" href="/boilerplate-vite-react-typescript-sass-edgrid/assets/index.999e58a8.css">
   </head>
   <body>
     <div id="root"></div>
